test mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -1288,7 +1288,7 @@ input::placeholder {
     .input-text--3  {
        padding-right: 0;
        padding-left: 10px;
-       width: 100%;
+       width: 370px;
     }    
 }
 
