--- a/css/styles.css
+++ b/css/styles.css
@@ -1286,9 +1286,9 @@ input::placeholder {
 
 @media screen and (max-width: 767px) {
     .input-text--3  {
-       padding-right: 0;
+       padding-right: 10px;
        padding-left: 10px;
-       width: 370px;
+       width: 100%;
     }    
 }
 
