--- a/css/styles.css
+++ b/css/styles.css
@@ -340,13 +340,6 @@ li {
     }
 }
 
-@media screen and (max-width: 767px) {
-    .mobile-image {
-        width: 320px;
-        height: 221px;
-    }
-}
-
 .title--large {
     font-size: 27px;
     line-height: 37px;
@@ -546,6 +539,12 @@ li {
     }
 }
 
+@media screen and (max-width: 767px) {
+    .video {
+        margin-top: -200px;
+    }
+}
+
 .play-button {
     background: #E3B873;
     box-shadow: 0px 5px 30px rgba(227, 184, 115, 0.2);
@@ -729,7 +728,7 @@ input[type="text"] {
 
 @media screen and (max-width: 1299px) {
     .input-underline {
-        width: 340px;
+        width: 330px;
     }
 }
 
@@ -777,7 +776,7 @@ input::placeholder {
     }
 
     .checkbox-mobile--1>input[type="checkbox"] {    
-        margin-left: -78px;
+        margin-left: -68px;
     }
 }
 
@@ -1281,6 +1280,7 @@ input::placeholder {
     .input-text--3  {
        padding-right: 20px;
        padding-left: 20px;
+       justify-content: start;
     }    
 }
 
@@ -1288,8 +1288,8 @@ input::placeholder {
     .input-text--3  {
        padding-right: 10px;
        padding-left: 10px;
-       margin-right: 0;
-       width: 100%;
+       margin-left: -25px;
+       width: 350px;
     }    
 }
 
@@ -1303,8 +1303,20 @@ input::placeholder {
     flex-grow: 1;
 }
 
+@media screen and (max-width: 767px) {
+    .input-clue--3  {
+       flex-grow: 0;
+    }    
+}
+
 .input-underline--long {
     width: 100%;
+}
+
+@media screen and (max-width: 1299px) {
+    .input-underline--long {
+        width: 330px;
+    }
 }
 
 .button-submit--3 {
