--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ li {
 
 @media screen and (max-width: 767px) {
     .header-container {
+        width: 360px;
         padding: 0 10px;
     }
 }
@@ -202,6 +203,7 @@ li {
     .section-content {
         padding-left: 20px;
         padding-right: 20px;
+        width: 360px;
     }
 }
 
@@ -766,11 +768,21 @@ input::placeholder {
     }
 
     input[type="checkbox"] {    
-        margin-left: -8px;
+        margin-left: -18px;
     }
 
     .checkbox-mobile--1>input[type="checkbox"] {    
         margin-left: -68px;
+    }
+}
+
+@media screen and (min-width: 400px) {
+    input[type="checkbox"] {    
+        margin-left: 0;
+    }
+
+    .checkbox-mobile--1>input[type="checkbox"] {    
+        margin-left: -65px;
     }
 }
 
@@ -1201,7 +1213,7 @@ input::placeholder {
 @media screen and (max-width: 1299px) {
     .section-sixth  {
        background: black;
-       height: 1054px;
+       height: 1064px;
     }
 }
 
@@ -1325,6 +1337,9 @@ input::placeholder {
 @media screen and (max-width: 1299px) {
     .title--address  {
         padding-top: 41px;
+        width: 340px;
+        margin: 0 auto;
+        margin-bottom: 23px;
     }    
 
     br {
